# MIA_P1_201801449

./: CMakeLists.txt  CalificacionFase1p1.sh  CalificacionFase1p2.sh  README.md  entradaFinal.sh  main.cpp
Analizador/: Analizador.cpp  Analizador.h
Archivo/: Archivo.cpp  Archivo.h
Comandos/: exec.cpp  exec.h  fdisk.cpp  fdisk.h  mkdir.cpp  mkdir.h  mkdisk.cpp  mkdisk.h  mkfile.cpp  mkfile.h  mkfs.cpp  mkfs.h  mount.cpp  mount.h  rep.cpp  rep.h  rmdisk.cpp  rmdisk.h  syncronice.cpp  syncronice.h  unmount.cpp  unmount.h
Estructuras/: APUNTADORES.h  BLOQUEARCHIVO.h  BLOQUECARPETA.h  CONTENT.h  DISCO.h  EBR.h  INODOS.h  JOURNALING.h  MBR.h  SUPER_BLOQUE.h
fubox/Sevidor/: db.json  package-lock.json  package.json
fubox/Sevidor/routes/: routes.js
fubox/Sevidor/src/: index.js
fubox/backend/: package-lock.json  package.json
fubox/backend/src/: Estructura.js  index.js
fubox/frontend/: angular.json  package-lock.json  package.json
fubox/frontend/src/app/: app-routing.module.ts  app.module.ts  vigilantedos.guard.ts  vigilanteuno.guard.ts
fubox/frontend/src/app/components/accesodenegado/: accesodenegado.component.css  accesodenegado.component.html  accesodenegado.component.ts
fubox/frontend/src/app/components/colaboracionusuario/: colaboracionusuario.component.html  colaboracionusuario.component.ts
fubox/frontend/src/app/components/correo/: correo.component.html  correo.component.ts
fubox/frontend/src/app/components/gestorcarpet/: gestorcarpet.component.html  (+1 more)
fubox/frontend/src/app/services/: enviodatos.service.ts  registro.service.ts
(+21 files in other folders)
